--- a/lib/flashdb_config/CMakeLists.txt
+++ b/lib/flashdb_config/CMakeLists.txt
@@ -1,9 +1,9 @@
 idf_component_register(
-    SRCS "porting/fal_flash_esp32_port.c"
+    SRCS "src/fal_flash_esp32_port.c"
          "../../.pio/libdeps/heltec_wifi_lora_32_V3/FlashDB/port/fal/src/fal.c"
          "../../.pio/libdeps/heltec_wifi_lora_32_V3/FlashDB/port/fal/src/fal_flash.c"
          "../../.pio/libdeps/heltec_wifi_lora_32_V3/FlashDB/port/fal/src/fal_partition.c"
-    INCLUDE_DIRS "inc"
+    INCLUDE_DIRS "include"
                  "../../.pio/libdeps/heltec_wifi_lora_32_V3/FlashDB/port/fal/inc"
     PRIV_INCLUDE_DIRS ""
     PRIV_REQUIRES esp_partition freertos
